closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/LOS_Workspace_Action__mdt.object-meta.xml
<CustomObject>
    <description>Future workspace actions. Visibility does not authorize execution.</description>
    <label>LOS Workspace Action</label>
    <pluralLabel>LOS Workspace Action Records</pluralLabel>
</CustomObject>