closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/fields/LOS_Authorization_Policy_Code__c.field-meta.xml
<CustomField>
    <fullName>LOS_Authorization_Policy_Code__c</fullName>
    <description>Authorization Policy Code. See docs/data-dictionary.md for usage.</description>
    <label>Authorization Policy Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>