closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/fields/LOS_Handler_Key__c.field-meta.xml
<CustomField>
    <fullName>LOS_Handler_Key__c</fullName>
    <description>Handler Key. See docs/data-dictionary.md for usage.</description>
    <label>Handler Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>