closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/fields/LOS_Persona__c.field-meta.xml
<CustomField>
    <fullName>LOS_Persona__c</fullName>
    <description>Persona. See docs/data-dictionary.md for usage.</description>
    <label>Persona</label>
    <referenceTo>LOS_Persona__mdt</referenceTo>
    <relationshipLabel>LOS Workspace Action Persona</relationshipLabel>
    <relationshipName>LOS_Workspace_Action_Persona</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>