closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/fields/LOS_Requires_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>LOS_Requires_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires Confirmation. See docs/data-dictionary.md for usage.</description>
    <label>Requires Confirmation</label>
    <type>Checkbox</type>
</CustomField>