closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/fields/LOS_Section__c.field-meta.xml
<CustomField>
    <fullName>LOS_Section__c</fullName>
    <description>Section. See docs/data-dictionary.md for usage.</description>
    <label>Section</label>
    <referenceTo>LOS_Workspace_Section__mdt</referenceTo>
    <relationshipLabel>LOS Workspace Action Section</relationshipLabel>
    <relationshipName>LOS_Workspace_Action_Section</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>