closDevOrg/force-app/main/default/objects/LOS_Workspace_Action__mdt/fields/LOS_Transition__c.field-meta.xml
<CustomField>
    <fullName>LOS_Transition__c</fullName>
    <description>Transition. See docs/data-dictionary.md for usage.</description>
    <label>Transition</label>
    <referenceTo>LOS_Stage_Transition__mdt</referenceTo>
    <relationshipLabel>LOS Workspace Action Transition</relationshipLabel>
    <relationshipName>LOS_Workspace_Action_Transition</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>